# PROTAX-GPU

./: .gitignore  CMakeLists.txt  README.md  README_old.md  pyproject.toml  requirements.txt  setup.py
experiments/: eval_metrics.py
experiments/c-protax/: Makefile  README  classify_v0.c  classify_v1.c  classify_v2.c  defs.h  routines_model.c  routines_sequence.c  routines_taxonomy.c
lib/: cpu_knn.cpp  cpu_op_bind.cpp  cpu_ops.h  gpu_dispatch.cu  gpu_op_bind.cpp  gpu_ops.h  kernel_helpers.h  kernels.h  knn_cpu.cpp  knn_dispatch.cpp  knn_gpu.cu  knn_gpu.cuh  knn_kernels.cu  knn_ops.cpp  pybind11_kernel_helpers.h
models/params/: 37k_gd.npz  37k_mcmc.npz  model.npz
models/ref_db/: taxonomy37k.npz
protax/: baseline.py  classify.py  model.py  protax_utils.py  taxonomy.py
protax/knn_jax/: __init__.py  knn_ops.py
protax/ops/: __init__.py  knn_register.py
scripts/: convert.py  fix_librhash.sh  process_seqs.py  train_gd.py
src/knn_jax/: __init__.py  knn_jax.py
src/protax/: __init__.py  classify.py  model.py  protax_utils.py
tests/: debug-aln-state.csv  debug_x.csv  run_test.py  test_inference.py  test_seq_dist.py  test_topk.py  test_z_probs.py
tests/testfiles/: debug.aln
